# CppCythonMyMatrix

./: CMakeLists.txt  ConvTests.ipynb  MatMul.cpp  MatMul.py  MyMatrix-bench.cpp  MyMatrix-tests.cpp  MyMatrix.hpp  MyMatrixTests.py  MyMatrixWrapper.pxd  MyMatrixWrapper.pyx  Pipfile  README.md  cython.cmake  test-all-configs.ps1  test-python.ps1
